routing_table.tf
resource "aws_route_table" "terraform_rt" {
 vpc_id = aws_vpc.Terraform_VPC.id
 tags = {
        Name = "terraform_rt"
}
}
