network_acl.tf

resource "aws_network_acl" "terraform_NACL" {
  vpc_id = aws_vpc.Terraform_VPC.id
  subnet_ids = [ aws_subnet.public_subnet.id ]
# allow ingress port 22
  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = var.destinationCIDRblock 
    from_port  = 22
    to_port    = 22
  }
  
  # allow ingress port 80 
  ingress {
    protocol   = "tcp"
    rule_no    = 200
    action     = "allow"
    cidr_block = var.destinationCIDRblock 
    from_port  = 80
    to_port    = 80
  }
  
  # allow ingress ephemeral ports 
  ingress {
    protocol   = "tcp"
    rule_no    = 300
    action     = "allow"
    cidr_block = var.destinationCIDRblock
    from_port  = 1024
    to_port    = 65535
  }
  # allow ingress ICMP ALL
  ingress {
    protocol   = -1
    rule_no    = 150
    action     = "allow"
    cidr_block = var.destinationCIDRblock
    from_port  = 0
    to_port    = 0
  }

  
  # allow egress port 22 
  egress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = var.destinationCIDRblock
    from_port  = 22 
    to_port    = 22
  }
  
  # allow egress port 80 
  egress {
    protocol   = "tcp"
    rule_no    = 200
    action     = "allow"
    cidr_block = var.destinationCIDRblock
    from_port  = 80  
    to_port    = 80 
  }
 
  # allow egress ephemeral ports
  egress {
    protocol   = "tcp"
    rule_no    = 300
    action     = "allow"
    cidr_block = var.destinationCIDRblock
    from_port  = 1024
    to_port    = 65535
  }

   # allow ingress ICMP ALL
  egress {
    protocol   = -1
    rule_no    = 150
    action     = "allow"
    cidr_block = var.destinationCIDRblock
    from_port  = 0
    to_port    = 0
  }
tags = {
    Name = "terraform_NACL"
}
}
